syntax = "proto3";

package product.detail;

option csharp_namespace = "Parstech.Shop.Shared.Protos.ProductDetail";

service ProductDetailService {
  rpc GetProductByShortLink (ProductDetailRequest) returns (ProductDetailResponse) {}
}

message ProductDetailRequest {
  string short_link = 1;
  int32 store_id = 2;
  optional string user_name = 3;
}

message ProductDetailResponse {
  int32 id = 1;
  string name = 2;
  string latin_name = 3;
  string code = 4;
  double price = 5;
  double sale_price = 6;
  double discount_price = 7;
  string discount_date = 8;
  double base_price = 9;
  bool stock_status = 10;
  int32 quantity = 11;
  int32 maximum_sale_in_order = 12;
  int32 score = 13;
  string description = 14;
  string short_description = 15;
  string short_link = 16;
  int32 type_id = 17;
  string type_name = 18;
  string variation_name = 19;
  int32 store_id = 20;
  string store_name = 21;
  string latin_store_name = 22;
  string image = 23;
  int32 parent_id = 24;
  string parent_product_name = 25;
  int32 brand_id = 26;
  string brand_name = 27;
  string latin_brand_name = 28;
  int32 tax_id = 29;
  string rep_name = 30;
  string create_date = 31;
  string categury_name = 32;
  string categury_latin_name = 33;
  bool single_sale = 34;
  int32 quantity_per_bundle = 35;
  repeated PropertyDetail properties = 36;
  repeated RelatedProduct related_products = 37;
  optional bool is_in_favorites = 38;
  optional bool is_in_compare = 39;
}

message PropertyDetail {
  int32 id = 1;
  string name = 2;
  string value = 3;
}

message RelatedProduct {
  int32 id = 1;
  string name = 2;
  string image = 3;
  double price = 4;
  double sale_price = 5;
  string short_link = 6;
} 